# cxx-swift-interop

./: .gitignore  CMakeLists.txt  README.md
Sources/: CMakeLists.txt
Sources/CppBackend/: CMakeLists.txt  backend.cpp  backend.h  ball.cpp  ball.hpp  module.modulemap
Sources/SDL3/: CMakeLists.txt  SDL3.cpp  module.modulemap
Sources/SDLSwift/: CMakeLists.txt  module.modulemap
Sources/SwiftBackend/: Backend.swift  CMakeLists.txt
Sources/SwiftFrontend/: Application.swift  Ball.swift  CMakeLists.txt  main.swift
ci_scripts/: ci_post_clone.sh
xcode-cloud/ci_scripts/: ci_post_clone.sh
xcode-main/ci_scripts/: ci_post_clone.sh
