add_executable(SwiftFrontend MACOSX_BUNDLE main.swift Application.swift)
target_link_libraries(SwiftFrontend PRIVATE CppBackend SDLSwift)
set_target_properties(SwiftFrontend PROPERTIES
  XCODE_ATTRIBUTE_ENABLE_HARDENED_RUNTIME NO
  XCODE_EMBED_FRAMEWORKS "${SDL3}"
  XCODE_EMBED_FRAMEWORKS_REMOVE_HEADERS_ON_COPY YES
  XCODE_EMBED_FRAMEWORKS_CODE_SIGN_ON_COPY YES
  MACOSX_BUNDLE_BUNDLE_NAME "cxxswift"
  MACOSX_BUNDLE_GUI_IDENTIFIER "gay.pizza.cxxswift"
  BUILD_RPATH "@loader_path/../Frameworks"
  XCODE_ATTRIBUTE_SKIP_INSTALL "NO"
  XCODE_ATTRIBUTE_INSTALL_PATH "$(LOCAL_APPS_DIR)"
  MACOSX_BUNDLE_COPYRIGHT "© 2024 Gay Pizza Specifications")
